<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/WHITE"
    android:orientation="vertical"
    android:paddingTop="50dp">

    <ImageView
        android:id="@+id/img"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:padding="10dp"
        android:src="@drawable/logodog" />

    <LinearLayout
        android:id="@+id/llyt_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical"
        android:padding="10dp"
        android:paddingTop="50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_account"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/user_name"
                android:drawableLeft="@drawable/user_name"
                android:drawablePadding="8.0dip"
                android:hint="@string/hint_login_username"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:lines="1"
                android:maxLines="1"
                android:singleLine="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/GRAY"
                android:textColorHint="@color/bg_lightgrey" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            app:hintEnabled="false"
            app:passwordToggleDrawable="@drawable/ic_password_visibility_selector"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="#50ffffff">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/mima"
                android:drawableLeft="@drawable/mima"
                android:drawablePadding="8.0dip"
                android:hint="@string/hint_input_password"
                android:imeOptions="actionDone"
                android:inputType="numberPassword"
                android:lines="1"
                android:maxLines="1"
                android:singleLine="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/GRAY"
                android:textColorHint="@color/bg_lightgrey" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/cb_remember_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="10dp"
            android:layout_weight="2.5"
            android:button="@drawable/remember_password_checkbox_selector"
            android:padding="10dp"
            android:paddingLeft="50dp"
            android:text="@string/remember_password"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/GRAY" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_regist_account"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="10dp"
            android:layout_weight="2"
            android:padding="10dp"
            android:text="@string/regist_account"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/GRAY" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_btn_round_rect"
        android:minHeight="10dp"
        android:padding="15dp"
        android:text="@string/button_login"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/DARKGRAY" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="3"
            android:singleLine="true"
            android:text="------------------------"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/tv_third_part_login_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="3"
            android:padding="10dp"
            android:singleLine="true"
            android:text="@string/label_third_part_login"
            android:textAlignment="center"
            android:textColor="@color/bg_lightgrey" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="3"
            android:singleLine="true"
            android:text="------------------------" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="30dp"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_third_part_login_label">


        <ImageButton
            android:id="@+id/ibtn_wechat_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:minWidth="50.0dip"
            android:minHeight="50.0dip"
            android:src="@drawable/weixinlogo" />

        <androidx.legacy.widget.Space
            android:layout_width="100dp"
            android:layout_height="fill_parent" />

        <ImageButton
            android:id="@+id/ibtn_trial_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:minWidth="50.0dip"
            android:minHeight="50.0dip"
            android:src="@drawable/qqlogo" />
    </LinearLayout>
</LinearLayout>