<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/abl_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tb_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_action_bar"
            android:minHeight="?attr/actionBarSize"
            app:contentInsetStartWithNavigation="0dp"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">


            <com.davis.mall.views.MySearchView
                android:id="@+id/tool_search_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:hint="@string/ethintwords" />

            <TextView
                android:id="@+id/tv_toolbar_main_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:singleLine="true"
                android:text="@string/app_name"
                android:textColor="@color/WHITE"
                android:textSize="20sp"
                android:visibility="gone" />
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/dl_left_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:id="@+id/framelayout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <com.google.android.material.bottomnavigation.BottomNavigationView
                android:id="@+id/bottomNavigationView"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="0dp"
                android:background="@color/WHITE"
                app:itemIconSize="26dp"
                app:itemIconTint="@drawable/selector_tab_color"
                app:itemTextAppearanceActive="@style/bottom_selected_text"
                app:itemTextAppearanceInactive="@style/bottom_normal_text"
                app:itemTextColor="@drawable/selector_tab_color"
                app:labelVisibilityMode="labeled"
                app:menu="@menu/bottom_navigation_tab"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:background="@color/pageBackground"
            android:clickable="true"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginBottom="20dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:background="@drawable/ic_buildings" />

                <com.facebook.drawee.view.SimpleDraweeView
                    android:id="@+id/sdv_launcher"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="right"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    android:scaleType="centerCrop"
                    fresco:roundedCornerRadius="45dp" />
            </FrameLayout>

            <RelativeLayout
                android:id="@+id/rl_kuaikan"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/WHITE"
                android:foreground="?attr/selectableItemBackground">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/ic_kuai_kan_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/kuaikan"
                    android:textColor="@color/KuaiKanColor"
                    android:textSize="16sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_manman"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/WHITE"
                android:foreground="?attr/selectableItemBackground">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/ic_wang_yi_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/wangyi"
                    android:textColor="@color/WangYiColor"
                    android:textSize="16sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_zhijia"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/WHITE"
                android:foreground="?attr/selectableItemBackground">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/ic_zhi_jia_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/zhijia"
                    android:textColor="@color/ZhiJiaColor"
                    android:textSize="16sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_wangyi"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/WHITE"
                android:foreground="?attr/selectableItemBackground">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/ic_man_man_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/tengxun"
                    android:textColor="@color/ManManColor"
                    android:textSize="16sp" />
            </RelativeLayout>

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:background="@color/WHITE"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/tv_history"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:foreground="?attr/selectableItemBackground"
                    android:gravity="center"
                    android:text="基础大全"
                    android:textColor="@color/ToolbarLight"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_favorite"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:foreground="?attr/selectableItemBackground"
                    android:gravity="center"
                    android:text="我的收藏"
                    android:textColor="@color/ToolbarLight"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_about"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:foreground="?attr/selectableItemBackground"
                    android:gravity="center"
                    android:text="关于作者"
                    android:textColor="@color/ToolbarLight"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>
    </androidx.drawerlayout.widget.DrawerLayout>
</LinearLayout>